changed few paths in index.html

--- a/Avengers-Organisation/index.html
+++ b/Avengers-Organisation/index.html
@@ -25,10 +25,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/Avengers-Organisation/index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Avengers-Organisation/about.html">About us</a>
+            <a class="nav-link" href="about.html">About us</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -46,7 +46,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Avengers-Organisation/contact.html">Contact us</a>
+            <a class="nav-link" href="contact.html">Contact us</a>
           </li>
         </ul>
         <!--search field and button-->
@@ -157,7 +157,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/Avengers-Organisation/main image.jpg" class="d-block w-100 img-fluid" alt="image 1">
+        <img src="main image.jpg" class="d-block w-100 img-fluid" alt="image 1">
         <div class="carousel-caption d-none d-md-block">
           <h3><b>Welcome to Avengers</b></h3>
           <p>A team of Earth's Mightiest Heroes</p>
@@ -167,7 +167,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/Avengers-Organisation/image 1.jpg" class="d-block w-100 img-fluid" alt="image 2">
+        <img src="image 1.jpg" class="d-block w-100 img-fluid" alt="image 2">
         <div class="carousel-caption d-none d-md-block">
           <h3><b>Welcome to Avengers</b></h3>
           <p>A team of Earth's Mightiest Heroes</p>
@@ -177,7 +177,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/Avengers-Organisation/image 2.jpg" class="d-block w-100 img-fluid" alt="image 3">
+        <img src="image 2.jpg" class="d-block w-100 img-fluid" alt="image 3">
         <div class="carousel-caption d-none d-md-block">
           <h3><b>Welcome to Avengers</b></h3>
           <p>A team of Earth's Mightiest Heroes</p>
@@ -308,7 +308,7 @@
         <p><a class="btn btn-secondary" href="https://www.marvel.com/characters/hulk-bruce-banner">Read more »</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4 my-2">
-        <img src="/Avengers-Organisation/thor.jpg" class="bd-placeholder-img rounded-circle img-fluid" width="200" height="200">
+        <img src="thor.jpg" class="bd-placeholder-img rounded-circle img-fluid" width="200" height="200">
         <h4 class="fw-normal">Thor</h4>
         <p class="lead my-2">Thor is a godlike asgardian warrior who utilizes the powers of lightning and thunder to
           fight for justice and
@@ -317,7 +317,7 @@
         <p><a class="btn btn-secondary" href="https://www.marvel.com/characters/thor-thor-odinson">Read more »</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4 my-2">
-        <img src="/Avengers-Organisation/spider man.jpg" class="bd-placeholder-img rounded-circle img-fluid" width="200" height="200">
+        <img src="spider man.jpg" class="bd-placeholder-img rounded-circle img-fluid" width="200" height="200">
         <h4 class="fw-normal">Spider Man</h4>
         <p class="lead my-2">Spider-Man is a friendly neighborhood hero who uses his superhuman abilities to protect New
           York City from
@@ -329,7 +329,7 @@
         </p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4 my-2">
-        <img src="/Avengers-Organisation/deadpool3.jpeg" class="bd-placeholder-img rounded-circle img-fluid" width="200" height="200">
+        <img src="deadpool3.jpeg" class="bd-placeholder-img rounded-circle img-fluid" width="200" height="200">
         <h4 class="fw-normal">DeadPool</h4>
         <p class="lead my-2">Deadpool is a wacky, merc-for-hire antihero who is known for his twisted sense of humor and
           brutal fighting
