--- a/Avengers-Organisation/about.html
+++ b/Avengers-Organisation/about.html
@@ -25,10 +25,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/Avengers-Organisation/index.html">Home</a>
+            <a class="nav-link" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="/Avengers-Organisation/about.html">About us</a>
+            <a class="nav-link active" href="about.html">About us</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -46,7 +46,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Avengers-Organisation/contact.html">Contact us</a>
+            <a class="nav-link" href="contact.html">Contact us</a>
           </li>
         </ul>
         <!-- <form class="d-flex" role="search">
@@ -72,7 +72,7 @@
         </p>
       </div>
       <div class="col-md-5">
-        <img class="img-fluid" src="/Avengers-Organisation/avenger home 500x500.jpeg"
+        <img class="img-fluid" src="avenger home 500x500.jpeg"
           class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
       </div>
     </div>
