--- a/Faizan-Portfolio/index.html
+++ b/Faizan-Portfolio/index.html
@@ -137,7 +137,7 @@
                     </svg></a>
 
                 <!-- github -->
-                <a href="https://github.com/KaizenCoder000">
+                <a href="https://github.com/faiz-verse">
                     <svg class="w-[25px] h-[25px] text-gray-400 hover:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
@@ -147,7 +147,7 @@
                     </svg></a>
 
                 <!-- instagram -->
-                <a href="https://www.instagram.com/sanji.arts/">
+                <a href="https://www.instagram.com/its_faizan_._/">
                     <svg class="w-[25px] h-[25px] text-gray-400 hover:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                         <path fill="currentColor" fill-rule="evenodd"
