changes in index.html

--- a/Faizan-Portfolio/index.html
+++ b/Faizan-Portfolio/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/portfolio.css">
 
     <!-- icon -->
-    <link rel="icon" type="image/png" href="/images/FK logo.png">
+    <link rel="icon" type="image/png" href="/images/FK Logo.png">
 
     <!-- for projects image slider -->
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -118,7 +118,7 @@
 
 
             <!-- download resume -->
-            <a href="/Faizan Khan CV.pdf"><button style="background-color: gold;"
+            <a href="./Faizan Khan CV.pdf"><button style="background-color: gold;"
                     class="p-3 mb-6 rounded-md hover:shadow-md hover:shadow-gray-500 transition-all ease-in duration-[400ms]">
                     Download Resume
                 </button></a>
