changes in index.html

--- a/Faizan-Portfolio/index.html
+++ b/Faizan-Portfolio/index.html
@@ -26,7 +26,7 @@
             <ul class="flex flex-row justify-between items-center">
                 <li class="logo">
                     <!-- <span class="p-2 md:p-3 text-2xl font-extrabold" style="color:gold;">FK</span> -->
-                    <img class="w-10" src="/images/FK logo.png" alt="logo">
+                    <img class="w-10" src="/images/FK Logo.png" alt="logo">
                 </li>
                 <a href="#home">
                     <li
